--- a/fullstack/frontend/languges/html/index.htm
+++ b/fullstack/frontend/languges/html/index.htm
@@ -8,9 +8,9 @@
 </head>
 <body>
     <center>
-        <h1>my html topics</h1>
+        <h1>My html topics</h1>
     </center>
   <h2>my topic list as follwes</h2>
-  <a href="./hedings/heading.html">my html heading topic</a>
+  <a href="./hedings/heading.html">My html heading topic</a>
 </body>
 </html>
