--- a/fullstack/frontend/languges/index.html
+++ b/fullstack/frontend/languges/index.html
@@ -6,7 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>all languges</h1>
+    <h1>All languges</h1>
     <a href="./html/index.htm">html</a>
 </body>
 </html>
