--- a/fullstack/frontend/languges/html/hedings/heading.html
+++ b/fullstack/frontend/languges/html/hedings/heading.html
@@ -7,11 +7,11 @@
 </head>
 <body>
     hello all
-    <h1>hello all</h1>
-    <h2>hello all</h2>
-    <h3>hello all</h3>
-    <h4>hello all</h4>
-    <h5>hello all</h5>
-    <h6>hello all</h6>
+    <h1>The h1 is an HTML tag that indicates a title on a website</h1>
+    <h2>It defines the second-level headings on your webpage</h2>
+    <h3>Defines a level-three heading</h3>
+    <h4>Represents a level 4 heading in an HTML document</h4>
+    <h5>Defines the fifth level heading in the HTML document</h5>
+    <h6>Defines the least important heading</h6>
 </body>
 </html>
