--- a/fullstack/frontend/languges/html/index.htm
+++ b/fullstack/frontend/languges/html/index.htm
@@ -10,7 +10,7 @@
     <center>
         <h1>My html topics</h1>
     </center>
-  <h2>my topic list as follwes</h2>
+  <h2>My topic list as follwes</h2>
   <a href="./hedings/heading.html">My html heading topic</a>
 </body>
 </html>
