--- a/fullstack/frontend/languges/index.html
+++ b/fullstack/frontend/languges/index.html
@@ -7,6 +7,6 @@
 </head>
 <body>
     <h1>All languges</h1>
-    <a href="./html/index.htm">html</a>
+    <a href="./html/index.htm">Html</a>
 </body>
 </html>
