--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-<h1>Your Name Your Notes</h1>
+<h1>Neelakanth Chapi Your Notes</h1>
 <h2>list of topics</h2>
 <a href="./fullstack/frontend/index.html">frontend</a>
 </body>
