--- a/fullstack/frontend/index.html
+++ b/fullstack/frontend/index.html
@@ -7,6 +7,6 @@
 </head>
 <body>
     <h1>All frontend topics</h1>
-    <a href="./languges/index.html">languges</a>
+    <a href="./languges/index.html">Languges</a>
 </body>
 </html>
