--- a/fullstack/frontend/languges/html/index.htm
+++ b/fullstack/frontend/languges/html/index.htm
@@ -1,16 +1,23 @@
-
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
+
 <body>
     <center>
         <h1>My html topics</h1>
     </center>
-  <h2>My topic list as follwes</h2>
-  <a href="./hedings/heading.html">My html heading topic</a>
+    <h2>My topic list as follwes</h2>
+    <div><a href="./hedings/heading.html">My html heading topic</a></div>
+    <div><a href="./Paragraph/Paragraph.html">Pragraph tag</a></div>
+    <div> <a href="./Anchor/Anchor.html">Anchor tag</a></div>
+    <div> <a href="./Forms/forms.html">Forms tag</a></div>
+    <div><a href="./Image/image.html">Image tag</a></div>
+    <div> <a href="./Videos/video.html">Videos</a></div>
 </body>
+
 </html>
