learnt html tags

--- a/fullstack/frontend/languges/html/index.htm
+++ b/fullstack/frontend/languges/html/index.htm
@@ -12,12 +12,24 @@
         <h1>My html topics</h1>
     </center>
     <h2>My topic list as follwes</h2>
-    <div><a href="./hedings/heading.html">My html heading topic</a></div>
-    <div><a href="./Paragraph/Paragraph.html">Pragraph tag</a></div>
-    <div> <a href="./Anchor/Anchor.html">Anchor tag</a></div>
-    <div> <a href="./Forms/forms.html">Forms tag</a></div>
-    <div><a href="./Image/image.html">Image tag</a></div>
-    <div> <a href="./Videos/video.html">Videos</a></div>
+    <div>
+        <a href="./hedings/heading.html">My html heading topic</a>
+    </div>
+    <div>
+        <a href="./Paragraph/Paragraph.html">Pragraph tag</a>
+    </div>
+    <div> 
+        <a href="./Anchor/Anchor.html">Anchor tag</a>
+    </div>
+    <div> 
+        <a href="./Forms/forms.html">Forms tag</a>
+    </div>
+    <div>
+        <a href="./Image/image.html">Image tag</a>
+    </div>
+    <div>
+        <a href="./Videos/video.html">Videos</a>
+    </div>
 </body>
 
 </html>
