learnt html tags

--- a/fullstack/frontend/languges/html/Anchor/Anchor.html
+++ b/fullstack/frontend/languges/html/Anchor/Anchor.html
@@ -7,6 +7,7 @@
 </head>
 <body>
     <a href="https://www.wikipedia.org/">Testing</a>
-    <a href="">Downloads</a>
+    <a href="./Document.rtf">Downloads</a>
+    <a href="./dddd.txt">text format</a>
 </body>
 </html>
