--- a/fullstack/frontend/languges/Css/Colour/Colour.html
+++ b/fullstack/frontend/languges/Css/Colour/Colour.html
@@ -6,8 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>All languges</h1>
-    <a href="./html/index.htm">Html</a><br>
-    <a href="./Css/index.html">Css</a>
+    <h1 style="color: rgb(196, 139, 139);">What is Colour:</h1>
+    
 </body>
 </html>
