--- a/fullstack/frontend/languges/html/Lists/Unordered.html
+++ b/fullstack/frontend/languges/html/Lists/Unordered.html
@@ -6,8 +6,13 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>All languges</h1>
-    <a href="./html/index.htm">Html</a><br>
-    <a href="./Css/index.html">Css</a>
+    <ul>
+        <li>Neel</li>
+        <li>Ravi</li>
+        <li>Faijul</li>
+        <li>HArish</li>
+    </ul>
+        
+   
 </body>
 </html>
