--- a/fullstack/frontend/index.html
+++ b/fullstack/frontend/index.html
@@ -6,7 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>All frontend topics</h1>
+    <h1>All Frontend Topics</h1>
     <a href="./languges/index.html">Languages</a>
 </body>
 </html>
