--- a/fullstack/frontend/languges/html/Lists/Unordered.html
+++ b/fullstack/frontend/languges/html/Lists/Unordered.html
@@ -6,11 +6,16 @@
     <title>Document</title>
 </head>
 <body>
+    <h1>HTML Unordered List</h1>
+    <p><b>HTML Unordered List</b> or <b>Bulleted List</b> displays elements in bulleted format . We can use unordered list where <br> we do not need to display items in any particular order.
+       The HTML ul tag is used for the unordered list. <br><br> There can be 4 types of bulleted list:</p>
+
+
     <ul>
-        <li>Neel</li>
-        <li>Ravi</li>
-        <li>Faijul</li>
-        <li>HArish</li>
+        <li>disc</li>
+        <li>circle</li>
+        <li>square</li>
+        <li>none</li>
     </ul>
         
    
