--- a/fullstack/frontend/languges/html/Paragraph/Paragraph.html
+++ b/fullstack/frontend/languges/html/Paragraph/Paragraph.html
@@ -6,7 +6,42 @@
     <title>Document</title>
 </head>
 <body>
-    <p>A paragraph always starts on a new line, and is usually a block of text.</p>
-    <span>Neelakanth</span>
+    <h1>What is Paragraph</h1>
+    <p>Pragraph is nothing but text, this tag is used to define a paragraph in a webpage.</p>
+    <p>
+        <b>There are two basic types of HTML elements:</b>
+    </p>
+    <ul>
+        <li>
+            Block level elements
+        </li>
+        <br>
+        <li>
+            Inline elements
+        </li>
+        <h2>
+            Block Level Elements:
+        </h2>
+        <p>
+            A block-level element always starts on a new line, and the browsers automatically add some space before and after the element. <br>A block-level element always takes up the full width available.
+        </p>
+        <h2>
+            Inline elements:
+        </h2>
+        <p>Inline elements display in a line. They do not force the text after them to a new line.Some of the inline elemnets are Span tag and Anchor. tag</p>
+
+
+
+
+        
+        
+    </ul>
+
+
+
+
+
+
+    <span></span>
 </body>
 </html>
