--- a/fullstack/frontend/languges/html/Tables/Table.html
+++ b/fullstack/frontend/languges/html/Tables/Table.html
@@ -6,18 +6,58 @@
     <title>Document</title>
 </head>
 <body>
+    <h1>HTML Table</h1>
+    <p><b>HTML table tag</b> is used to display data in tabular form (row * column). There can be many columns in a row.</p>
+    <p>We can create a table to display data in tabular form, using table element, with the help of tr,td and elements. </p>
+    <p>In Each table, table row is defined by tr tag, table header is defined by th tag and and table data is defined by td tag.</p>
+    <p>HTML tables are used to manage the layout of the page e.g. header section, navigation bar, body content, footer section etc</p>
+    <h1>HTML Table Tags</h1>
+
     <table border="1">
         <tr>
-            <th>Number</th>
-            <th>Name</th>
-            <th>Dob</th>
-            <th>Branch</th>
+            <th>Tag</th>
+            <th>Description</th>
+            
         </tr>
         <tr>
-            <th>1</th>
-            <th>Neelakanth</th>
-            <th>09/06/2001</th>
-            <th>Ece</th>
+            <td>Table</td>
+            <td>It defines a table.</td>
+           </tr>
+        <tr>
+            <td>tr</td>
+           <td>It defines a row in a table.</td>
+        </tr>
+        <tr>
+            <td>th</td>
+            <td>It defines a header cell in a table.</td>
+        </tr> 
+         <tr>
+            <td>td</td>
+            <td>It defines a cell in a table.</td>
+        </tr>  
+        <tr>
+            <td>caption</td>
+            <td>It defines the table caption.</td>
+        </tr>  
+        <tr>
+            <td>colgroup</td>
+            <td>It specifies a group of one or more columns in a table for formatting.</td>
+        </tr>  
+        <tr>
+            <td>col</td>
+            <td>It is used with colgroup  element to specify column properties for each column.</td>
+        </tr> 
+         <tr>
+            <td>tbody</td>
+            <td>It is used to group the body content in a table.</td>
+        </tr> 
+         <tr>
+            <td>thead</td>
+            <td>It is used to group the header content in a table.</td>
+        </tr>  
+        <tr>
+            <td>tfooter</td>
+            <td>It is used to group the footer content in a table.</td>
         </tr>
     </table>
 </body>
