--- a/fullstack/frontend/languges/html/hedings/heading.html
+++ b/fullstack/frontend/languges/html/hedings/heading.html
@@ -6,12 +6,30 @@
     <title>Document</title>
 </head>
 <body>
-    hello all
-    <h1>The h1 is an HTML tag that indicates a title on a website</h1>
-    <h2>It defines the second-level headings on your webpage</h2>
-    <h3>Defines a level-three heading</h3>
-    <h4>Represents a level 4 heading in an HTML document</h4>
-    <h5>Defines the fifth level heading in the HTML document</h5>
-    <h6>Defines the least important heading</h6>
+    <h1>What is heading Tag</h1>
+    <p>The heading tag is used in HTML to define headings of a page. Headings are defined by hn , with “n” being <br>a number between 1 and 6, and determines which position a heading has in the hierarchy of the heading structure.</p>
+   <ul>
+    <li>
+        <h1>The h1 is an HTML tag that indicates a title on a website</h1>
+    </li>
+    <li>
+        <h2>It defines the second-level headings on your webpage</h2>
+    </li>
+    <li>
+        <h3>Defines a level-three heading</h3>
+    </li>
+    <li>
+        <h4>Represents a level 4 heading in an HTML document</h4>
+    </li>
+    <li>
+        <h5>Defines the fifth level heading in the HTML document</h5>
+    </li>
+    <li>
+        <h6>Defines the least important heading</h6>
+    </li>
+   </ul>
+  
+
+
 </body>
 </html>
