--- a/fullstack/frontend/languges/html/index.htm
+++ b/fullstack/frontend/languges/html/index.htm
@@ -8,40 +8,41 @@
 </head>
 
 <body>
-    <center>
-        <h1>My html topics</h1>
-    </center>
-    <h2>My topic list as follwes</h2>
-    <div>
-        <a href="./hedings/heading.html">My html heading topic</a>
-    </div>
-    <div>
-        <a href="./Paragraph/Paragraph.html">Pragraph tag</a>
-    </div>
-    <div> 
-        <a href="./Anchor/Anchor.html">Anchor tag</a>
-    </div>
-    <div> 
-        <a href="./Forms/forms.html">Forms tag</a>
-    </div>
-    <div>
-        <a href="./Image/image.html">Image tag</a>
-    </div>
-    <div>
-        <a href="./Videos/video.html">Videos</a>
-    </div>
-    <div>
-        <a href="./iframe/iframe.html">Iframes</a>
-    </div>
-    <div>
-        <a href="./Lists/Ordered.html">List-Ordred</a>
-    </div>
-    <div>
-        <a href="./Lists/Unordered.html">List-UnOrdred</a>
-    </div>
-    <div>
-        <a href="./Tables/Table.html">Tables</a>
-    </div>
+        <h1>My html topics:</h1>
+    <h2>My topic list as follws:</h2>
+    <ol>
+        <li>  <div>
+            <a href="./hedings/heading.html">My html heading topic</a>
+        </div></li>
+        <li> <div>
+            <a href="./Paragraph/Paragraph.html">Pragraph tag</a>
+        </div></li>
+        <li> <div> 
+            <a href="./Anchor/Anchor.html">Anchor tag</a>
+        </div></li>
+        <li> <div> 
+            <a href="./Forms/forms.html">Forms tag</a>
+        </div></li>
+        <li><div>
+            <a href="./Image/image.html">Image tag</a>
+        </div></li>
+        <li> <div>
+            <a href="./Videos/video.html">Videos</a>
+        </div></li>
+        <li>  <div>
+            <a href="./iframe/iframe.html">Iframes</a>
+        </div></li>
+        <li> <div>
+            <a href="./Lists/Ordered.html">List-Ordred</a>
+        </div></li>
+        <li><div>
+            <a href="./Lists/Unordered.html">List-UnOrdred</a>
+        </div></li>
+        <li><div>
+            <a href="./Tables/Table.html">Tables</a>
+        </div></li>
+    </ol> 
+    
 </body>
 
 </html>
