--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
 </head>
 <body>
 <h1>Neelakanth Chapi Your Notes</h1>
-<h2>list of topics</h2>
+<h1>Full Stack Web Developer</h1>
+<p>A full stack web developer is a person who can develop both client and server software.</p>
+<h2>Full Stack Topics</h2>
 <a href="./fullstack/frontend/index.html">frontend</a>
 </body>
 </html>
