--- a/fullstack/frontend/languges/html/Forms/forms.html
+++ b/fullstack/frontend/languges/html/Forms/forms.html
@@ -6,7 +6,26 @@
     <title>Document</title>
 </head>
 <body>
-    <center>
+        <h1>Definition of Forms</h1>
+        <p>
+            An <b>HTML form</b> is a section of a document which contains controls such as text fields, password fields,
+            checkboxes, radio buttons,<br> submit button, menus etc.An HTML form facilitates the user to enter data
+            that is to be sent to the server for processing such as name,<br> email address, password, phone number, etc. .
+         <h1>Why use HTML Form</h1>   
+         <p>
+            HTML forms are required if you want to collect some data from of the site visitor.
+            For example: If a user want to purchase some items on internet,<br> he/she must fill the form 
+            such as shipping address and credit/debit card details so that item can be sent to the given
+            address.
+         </p>
+
+
+
+
+
+           <br>
+           <br> 
+        </p>
         <form>
             <div>
                 <label>Name</label><br>
@@ -38,6 +57,5 @@
         </div>
         <button>Click Me</button>
         </form>
-    </center>
 </body>
 </html>
