--- a/fullstack/frontend/languges/html/Lists/Ordered.html
+++ b/fullstack/frontend/languges/html/Lists/Ordered.html
@@ -6,11 +6,17 @@
     <title>Document</title>
 </head>
 <body>
+    <h1>HTML Ordered List</h1>
+    <p>
+       <b> HTML Ordered List</b> or Numbered List displays elements in numbered format. The HTML ol tag is used for ordered list. <br> We can use ordered list to represent items either in numerical order format or alphabetical order format,
+        or any format where  <br> an order is emphasized. There can be different types of numbered list:
+    </p>
     <ol>
-        <li>Neel</li>
-        <li>Ravi</li>
-        <li>Faijul</li>
-        <li>HArish</li>
+        <li>Numeric Number (1, 2, 3)</li>
+        <li>Capital Roman Number (I II III)</li>
+        <li>Small Romal Number (i ii iii)</li>
+        <li>Capital Alphabet (A B C)</li>
+        <li>Small Alphabet (a b c)</li>
     </ol>
 </body>
 </html>
