--- a/fullstack/frontend/languges/Css/index.html
+++ b/fullstack/frontend/languges/Css/index.html
@@ -11,7 +11,11 @@
         </h1>
         <p>Are as Follows</p>
         <ol>
-            <li><a href="./Colour/Colour.html"></a></li>
+            <li><a href="./Colour/Colour.html">colors</a></li>
+            <li><a href="./3-ways of css/inline.html">3-way of css</a></li>
+            <li><a href="./background/bg.html">Background</a></li>
+            <li><a href="./height/Height.html">Height</a></li>
+            <li><a href="./Width/width.html">Width</a></li>
         </ol>
 </body>
 </html>
