--- a/fullstack/frontend/languges/Css/index.html
+++ b/fullstack/frontend/languges/Css/index.html
@@ -6,10 +6,17 @@
     <title>Document</title>
 </head>
 <body>
+    <h1>What is CSS?</h1>
+    <p>CSS is the language we use to style a Web page.</p>
+    <ul>
+        <li>CSS stands for Cascading Style Sheets</li>
+        <li>CSS describes how HTML elements are to be displayed on screen, paper, or in other media</li>
+        <li>CSS saves a lot of work. It can control the layout of multiple web pages all at once</li>
+        <li>External stylesheets are stored in CSS files</li>
+    </ul>
         <h1>
-            Topics of Css
+            Topics of Css:
         </h1>
-        <p>Are as Follows</p>
         <ol>
             <li><a href="./Colour/Colour.html">colors</a></li>
             <li><a href="./3-ways of css/inline.html">3-way of css</a></li>
