--- a/fullstack/frontend/languges/html/index.htm
+++ b/fullstack/frontend/languges/html/index.htm
@@ -8,8 +8,17 @@
 </head>
 
 <body>
-        <h1>My html topics:</h1>
-    <h2>My topic list as follws:</h2>
+    <h1>HTML Introduction</h1>
+    <ul>
+        <li> HTML is the standard markup language for creating Web pages</li>
+        <li>HTML stands for Hyper Text Markup Language</li>
+        <li>HTML describes the structure of a Web page</li>
+        <li>HTML consists of a series of elements</li>
+        <li>HTML elements tell the browser how to display the content</li>
+        <li>An HTML element is defined by a start tag, some content, and an end tag</li>
+    </ul>
+   
+    <h2>HTML topics list as follws:</h2>
     <ol>
         <li>  <div>
             <a href="./hedings/heading.html">My html heading topic</a>
