--- a/fullstack/frontend/index.html
+++ b/fullstack/frontend/index.html
@@ -6,7 +6,15 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>All Frontend Topics</h1>
+    <h1>Front-End Developer</h1>
+    <div>
+        <p>A Front-End Developer is someone who creates websites and web applications.</p>
+        <p>The difference between Front-End and Back-End is that Front-End refers to how a web page looks,
+            while back-end refers to how it works.</p>
+            <p>You can think of Front-End as client-side and Back-End as server-side.</p>
+    </div>
+   
+    <p><b>The basic languages for Front-End Development are:</b></p>
     <a href="./languges/index.html">Languages</a>
 </body>
 </html>
