--- a/fullstack/frontend/languges/Css/3-ways of css/extern.html
+++ b/fullstack/frontend/languges/Css/3-ways of css/extern.html
@@ -7,6 +7,11 @@
     <link rel="stylesheet" href="./style.css">
 </head>
 <body>
-    <h3>im neeeeeeeel</h3>
+    <h1>External CSS</h1>
+    <p>The external style sheet is generally used when you want to make changes on multiple pages. 
+        It is ideal for this condition <br> because it facilitates
+        you to change the look of the entire web site by changing just one file.</p>
+        <p>It uses the link tag on every pages and the link tag should be put inside the head section.</p>
+    <h3>NEELAKANTH</h3>
 </body>
 </html>
