--- a/fullstack/frontend/languges/Css/3-ways of css/inline.html
+++ b/fullstack/frontend/languges/Css/3-ways of css/inline.html
@@ -6,6 +6,9 @@
     <title>Document</title>
 </head>
 <body>
-    <h1 style="color: brown;">im neel</h1>
+    <h1>Inline CSS</h1>
+    <p>We can apply CSS in a single element by inline CSS technique.</p>
+    <p>If you want to use inline CSS, you should use the style attribute to the relevant tag.</p>
+    <h2 style="color: brown;">NEELAKANTH</h2>
 </body>
 </html>
