--- a/fullstack/frontend/languges/Css/3-ways of css/interncss.html
+++ b/fullstack/frontend/languges/Css/3-ways of css/interncss.html
@@ -6,9 +6,15 @@
     <title>Document</title>
 </head>
 <body>
+    <h1>Internal CSS</h1>
+    <P>The internal style sheet is used to add a unique style for a single document. <br>
+        It is defined in head section of the HTML page inside the style tag.</P>
     <style>
-        h1{color: blueviolet;}
+        h2{
+            color: brown;
+        }
     </style>
-    <h1>im neelllll</h1>
+    
+    <h2>NEELAKANTH</h2>
 </body>
 </html>
