--- a/fullstack/frontend/languges/Css/Colour/Colour.html
+++ b/fullstack/frontend/languges/Css/Colour/Colour.html
@@ -6,7 +6,10 @@
     <title>Document</title>
 </head>
 <body>
-    <h1 style="color: rgb(196, 139, 139);">What is Colour:</h1>
+    <h1>HTML Colors</h1>
+    <p>HTML colors are specified with predefined color names, or with RGB, HEX, HSL, RGBA, or HSLA values.</p>
+    <h1 style="color: brown;">NEELAKANTH</h1>
+   
     
 </body>
 </html>
