--- a/fullstack/frontend/languges/Css/index.html
+++ b/fullstack/frontend/languges/Css/index.html
@@ -19,7 +19,13 @@
         </h1>
         <ol>
             <li><a href="./Colour/Colour.html">colors</a></li>
-            <li><a href="./3-ways of css/inline.html">3-way of css</a></li>
+            <li>3-way of css:</li>
+            <ul>
+                <li><a href="./3-ways of css/extern.html">External css</a></li>
+                <li><a href="./3-ways of css/interncss.html">Internal css</a></li>
+                <li><a href="./3-ways of css/inline.html">Inline css</a></li>
+            </ul>
+           
             <li><a href="./background/bg.html">Background</a></li>
             <li><a href="./height/Height.html">Height</a></li>
             <li><a href="./Width/width.html">Width</a></li>
