--- a/fullstack/frontend/languges/Css/background/bg.html
+++ b/fullstack/frontend/languges/Css/background/bg.html
@@ -6,10 +6,14 @@
     <title>Document</title>
 </head>
 <body>
+    <h1>CSS Background-color</h1>
+    <p>This property is used to set the background color of an element.
+        <br> The background of an element covers the total size, including the
+         padding and border and excluding margin. It can be applied to all HTML elements.</p>
     <style>
         div{
-            width: 500px;
-            height: 500px;
+            width: 300px;
+            height: 300px;
             background-color: aqua;
         }
     </style>
