--- a/fullstack/frontend/languges/Css/index.html
+++ b/fullstack/frontend/languges/Css/index.html
@@ -18,8 +18,8 @@
             Topics of Css:
         </h1>
         <ol>
-            <li><a href="./Colour/Colour.html">colors</a></li>
-            <li>3-way of css:</li>
+            <li><a href="./Colour/Colour.html">Colors</a></li>
+            <li>3-Way of css:</li>
             <ul>
                 <li><a href="./3-ways of css/extern.html">External css</a></li>
                 <li><a href="./3-ways of css/interncss.html">Internal css</a></li>
@@ -27,8 +27,14 @@
             </ul>
            
             <li><a href="./background/bg.html">Background</a></li>
-            <li><a href="./height/Height.html">Height</a></li>
-            <li><a href="./Width/width.html">Width</a></li>
+            <li><a href="./Box-model/box-model.html">Box-Model</a></li>
+            <li><a href="./inline-block/inline-block.html">Inlineblock</a></li>
+            <li>Selectors</li>
+            <ul>
+                <li><a href="./Selectors/tagSelector.html">Tag-Selector</a></li>
+                <li><a href="./Selectors/idSelector.html">Id-Selector</a></li>
+                <li><a href="./Selectors/classSelector.html">Class-Selector</a></li>
+            </ul>
         </ol>
 </body>
 </html>
