--- a/fullstack/frontend/languges/Css/Box-model/box-model.html
+++ b/fullstack/frontend/languges/Css/Box-model/box-model.html
@@ -4,8 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <style>
+        img{
+            float: right;
+         
+        }
+    </style>
 </head>
 <body>
+    <img width="700px" src="./Box model.jpg" alt="" style="width: 600px;">
     <h1>CSS Box Model</h1>
     <p>All HTML elements can be considered as boxes.</p>
     <p>In CSS, the term "box model" is used when talking about design and layout.</p>
@@ -18,7 +25,7 @@
         <li><b>Border</b> :- A border that goes around the padding and content</li>
         <li><b>Margin </b>:- Clears an area outside the border. The margin is transparent</li>
     </ul>
-    <img width="700px" src="./Box model.jpg" alt="">
+    
 
     <style>
         h4{
@@ -27,6 +34,7 @@
             margin-bottom: 500px;
         }
     </style>
-    <h4>kjhgf</h4>
+    <p><b>Ex:-</b></p>
+    <h4>Neelakanth</h4>
 </body>
 </html>
