--- a/fullstack/frontend/languges/Css/index.html
+++ b/fullstack/frontend/languges/Css/index.html
@@ -35,6 +35,11 @@
                 <li><a href="./Selectors/idSelector.html">Id-Selector</a></li>
                 <li><a href="./Selectors/classSelector.html">Class-Selector</a></li>
             </ul>
+            <li><a href="./Border-Radius/Borderradius.html">Border-Radius</a></li>
+            <li><a href="./Fonts/Fonts.html">Fonts</a></li>
+            <li><a href="./Methods/Calc.html">Methods_Calc</a></li>
+            <li><a href="./Overflow/Overflow.html">OPverflow</a></li>
+            <li><a href="./Position/Position.html">Position</a></li>
         </ol>
 </body>
 </html>
