--- a/fullstack/frontend/languges/Css/Border-Radius/Borderradius.html
+++ b/fullstack/frontend/languges/Css/Border-Radius/Borderradius.html
@@ -12,10 +12,12 @@
             height: 500px;
             background-color: red;
             border-radius: 50px;
-            /*background-image: url(1.jpg);*/
-            clip-path: polygon(0% 20%, 60% 20%, 60% 0%, 100% 50%, 60% 100%, 60% 80%, 0% 80%);
-        }
-    </style>
+            background-image: url(1.jpg);
+            /* clip-path: polygon(38% 0, 74% 81%, 84% 0, 100% 0, 85% 100%, 65% 100%, 33% 33%, 23% 100%, 5% 100%, 21% 0); */
+            clip-path: polygon(50% 0, 68% 81%, 75% 0, 100% 0, 85% 100%, 55% 100%, 33% 33%, 23% 100%, 0 100%, 16% 0);
+  
+  
+            </style>
     <div id="root"></div>
 </body>
 </html>
