--- a/fullstack/frontend/languges/Css/Border-Radius/Borderradius.html
+++ b/fullstack/frontend/languges/Css/Border-Radius/Borderradius.html
@@ -6,6 +6,8 @@
     <title>Document</title>
 </head>
 <body>
+    <h1>Definition of border-radius</h1>
+    <p>The border-radius property defines the radius of the element's corners.</p>
     <style>
         #root{
             width: 500px;
