--- a/fullstack/frontend/languges/Css/Methods/Calc.html
+++ b/fullstack/frontend/languges/Css/Methods/Calc.html
@@ -6,6 +6,8 @@
     <title>Document</title>
 </head>
 <body>
+    <h1>CSS calc() Function</h1>
+    <p>Use calc() to calculate the width of a div element:</p>
     <style>
         #root{
             width:calc(100% - 200px);
@@ -14,6 +16,6 @@
 
         }
     </style>
-    <div id="root"></div>
+    <div id="root">Neel</div>
 </body>
 </html>
