--- a/fullstack/frontend/languges/Css/Overflow/Overflow.html
+++ b/fullstack/frontend/languges/Css/Overflow/Overflow.html
@@ -6,6 +6,16 @@
     <title>Document</title>
 </head>
 <body>
+    <h1>CSS Overflow</h1>
+    <p>The overflow property specifies whether to clip the content or to add scrollbars when the content of an element is too big to fit in the specified area.</p>
+    <p><b>The overflow property has the following values:</b></p>
+    <ul>
+      
+      <li><b>Visible :-</b> Default. The overflow is not clipped. The content renders outside the element's box</li>
+      <li><b>Hidden :- </b>The overflow is clipped, and the rest of the content will be invisible</li>
+      <li><b>Scroll :- </b>The overflow is clipped, and a scrollbar is added to see the rest of the content</li>
+      <li><b>Auto :-</b> Similar to scroll, but it adds scrollbars only when necessary</li>
+    </ul>
     <style>
         #root{
             width: 200px;
