--- a/index.html
+++ b/index.html
@@ -6,10 +6,27 @@
     <title>Neelakanth</title>
 </head>
 <body>
+    <style>
+        #root{
+            width: 1350px;
+            height: 1000px;
+            margin: 0;
+            padding: 0;
+            background-image: url(1.png);
+            background-repeat: no-repeat;
+            background-size: 100%;
+            
+        }
+
+
+    </style>
+    <div id="root">
 <h1>Neelakanth Chapi Your Notes</h1>
 <h1>Full Stack Web Developer</h1>
 <p>A full stack web developer is a person who can develop both client and server software.</p>
 <h2>Full Stack Topics</h2>
 <a href="./fullstack/frontend/index.html">frontend</a>
+</div>
+
 </body>
 </html>
