--- a/fullstack/frontend/languges/Css/ResponsiveDesign/Flex.html
+++ b/fullstack/frontend/languges/Css/ResponsiveDesign/Flex.html
@@ -22,6 +22,15 @@
         }
  
     </style>
+    <h1>CSS flex Property</h1>
+    <p>The flex CSS shorthand property is the combination of flex-grow, flex-shrink, and flex-basis properties. <br> It is used to set the length of flexible items. The flex property is much more responsive and mobile-friendly. <br> It is easy to position child elements and the main container. </p>
+    <p><b>Property Values:-</b></p>
+    <ul>
+        <li><b>Flex-grow Property:-</b> A number that specifies, how much items will grow relative to the rest of the flexible items.</li>
+        <li><b>Flex-shrink Property:-</b> A number that specifies, how much items will shrink relative to the rest of the flexible items.</li>
+        <li><b>Flex-basis Property:- </b>It sets the length of items. Legal values of flex-basis are: auto, inherit, or a number followed  <br>by %, em, px, or any other length unit.</li>
+        <li><b>Flex-wrap Property:- </b>The CSS flex-wrap property is used to specify whether flex items are forced into a single <br> line or wrapped onto multiple lines.</li>
+    </ul>
     <div id="root">
         <h1 id="Box-1" class="abc">box1</h1>
         <h1 id="Box-2" class="abc">box2</h1>
