--- a/fullstack/frontend/languges/Css/ResponsiveDesign/MediaQuery.html
+++ b/fullstack/frontend/languges/Css/ResponsiveDesign/MediaQuery.html
@@ -40,6 +40,16 @@
         }
 
     </style>
+    <h1>CSS media queries</h1>
+    <p>The <b>Media query</b> in CSS is used to create a responsive web design. It means that the view of a <br> web page differs from system to system based on screen or media types. <br> The breakpoint specifies for what device-width size, the content is just starting to break or deform.</p>
+    <p><b>Media queries can be used to check many things:-</b></p>
+    <ul>
+        <li>width and height of the viewport</li>
+        <li>width and height of the device</li>
+        <li>Orientation</li>
+        <li>Resolution</li>
+    </ul>
+
     <div id="root1" class="abc">device name small devices szife of 0px to 300px</div>
     <div id="root2" class="abc">device name Tabs szife of 301px to 500px</div>
     <div id="root3" class="abc">device name Desktop szife of 501px to 900px</div>
