--- a/fullstack/frontend/index.html
+++ b/fullstack/frontend/index.html
@@ -16,7 +16,10 @@
    
     <p><b>The basic languages for Front-End Development are:</b></p>
 
-    <a href="./languges/index.html">Languages</a>
+      <ul>
+        <li><a href="./languges/index.html">Languages</a></li>
+        <li><a href="./Frameworks/index.html">Frameworks</a></li>
+      </ul>
 
     
 </body>
