--- a/fullstack/frontend/Frameworks/index.html
+++ b/fullstack/frontend/Frameworks/index.html
@@ -6,6 +6,18 @@
     <title>Document</title>
 </head>
 <body>
-    <a href="./Bootstrap/Flipcart.html">Flipkart website</a>
+    <h1>Bootstrap</h1>
+    <p>Bootstrap is the most popular CSS Framework for developing responsive and mobile-first websites.
+        <br>Bootstrap is a free front-end framework for faster and easier web development
+        <br>Bootstrap includes HTML and CSS based design templates for typography, forms, buttons, tables, navigation, modals, image carousels and many other, as well as optional JavaScript plugins
+        <br>Bootstrap also gives you the ability to easily create responsive designs
+    </p>
+    <ul>
+        <li><a href="./Bootstrap/offline/portfolio/index.html">Offline</a></li>
+        <li><a href="./Bootstrap/online/index.html">Online</a></li>
+        <li><a href="./Bootstrap/Projects/Flipcart.html">Projects</a></li>
+    </ul>
+
+    
 </body>
 </html>
