--- a/fullstack/frontend/Frameworks/index.html
+++ b/fullstack/frontend/Frameworks/index.html
@@ -15,7 +15,11 @@
     <ul>
         <li><a href="./Bootstrap/offline/portfolio/index.html">Offline</a></li>
         <li><a href="./Bootstrap/online/index.html">Online</a></li>
-        <li><a href="./Bootstrap/Projects/Flipcart.html">Projects</a></li>
+        <li>Projects</li>
+        <ul>
+            <li><a href="./Bootstrap/Projects/Flipkart/Flipcart.html">Flipkart</a></li>
+            <li><a href=".">Portfolio</a></li>
+        </ul>
     </ul>
 
     
