--- a/Front/fullstack/frontend/Frameworks/index.html
+++ b/Front/fullstack/frontend/Frameworks/index.html
@@ -18,7 +18,7 @@
         <li>Projects</li>
         <ul>
             <li><a href="./Bootstrap/Projects/Flipkart/Flipcart.html">Flipkart</a></li>
-            <li><a href=".">Portfolio</a></li>
+            <li><a href="./Bootstrap/Projects/Portfolio/index.html">Portfolio</a></li>
         </ul>
     </ul>
 
