--- a/index.html
+++ b/index.html
@@ -1,32 +1,73 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Neelakanth</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Neelakanth</title>
 </head>
+<style>
+  body{
+    background-color: #0e0d0d;
+    /* background-image: url(./1.jpg);
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    background-size: 100% 100%; */
+
+  }
+  div{
+    font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
+    font-size: 33px;
+    color: aliceblue;
+    text-align: center;
+  }
+  p{
+    color: aliceblue;
+    font-size: 20px;
+  }
+  h2{
+    font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
+    color: #007bff;
+    font-size: 48px;
+    margin-bottom: 20px;
+    margin-top: 100px;
+  }
+  .btn{
+      display: inline-block;
+      background-color: #007bff;
+      color: #fff;
+      padding: 14px 28px;
+      text-decoration: none;
+      font-size: 24px;
+      border-radius: 30px;
+      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+      transition: background-color 0.3s, transform 0.2s;
+  }
+
+   .btn:hover {
+      background-color: #0056b3;
+      transform: scale(1.05);
+    }
+  footer {
+      background-color: #000;
+      color: #fff;
+      text-align: center;
+      padding: 10px;
+      margin-top: 140px;
+    }
+</style>
 <body>
-    <style>
-        #root{
-            width: 1350px;
-            height: 1000px;
-            margin: 0;
-            padding: 0;
-            background-image: url(1.png);
-            background-repeat: no-repeat;
-            background-size: 100%;
-            
-        }
 
+  <div class="class">
+    <h1>Welcome To Our Coding Universe</h1>
+    <h2>UNLEASE YOUR IMAGINATION</h2>
+    <P>Clean code always looks like it was written by someone who cares.And Coding is Thinking Not Typing.</P>
+    <a href="./Front/fullstack/frontend/index.html" class="btn">Start Your Journey</a>
 
-    </style>
-    <div id="root">
-<h1>Neelakanth Chapi Your Notes</h1>
-<h1>Full Stack Web Developer</h1>
-<p>A full stack web developer is a person who can develop both client and server software.</p>
-<h2>Full Stack Topics</h2>
-<a href="./fullstack/frontend/index.html">frontend</a>
-</div>
+  </div>
 
+  <footer>
+    <p>Neelakanth</p>
+  </footer>
+  
 </body>
 </html>
