--- a/Front/fullstack/frontend/languges/index.html
+++ b/Front/fullstack/frontend/languges/index.html
@@ -14,6 +14,18 @@
         <li>
             <a href="./Css/index.html">Css</a>
         </li>
+        <li>
+           JavaScript
+        </li>
+        <ul>
+            <li><a href="./JavaScript/3-ways-to-give-js-to-html/3was-.html">3-ways-to-give-js-to-html</a></li>
+            <li><a href="./JavaScript/variables/variable.html">variables</a></li>
+        </ul>
+        <li>TypeScript</li>
+        <ul>
+            <li><a href="./TypeScript/intro/intro.html">Introduction</a></li>
+            <li><a href=".."></a></li>
+        </ul>
     </ol>
     
 </body>
