--- a/Front/fullstack/frontend/languges/index.html
+++ b/Front/fullstack/frontend/languges/index.html
@@ -23,9 +23,23 @@
         </ul>
         <li>TypeScript</li>
         <ul>
-            <li><a href="./TypeScript/intro/intro.html">Introduction</a></li>
-            <li><a href=".."></a></li>
+            <li><a href="./TypeScript/intro/intro.html">Introduction</a></li>  
         </ul>
+        <ul>
+            <li>DataTypes</li>
+           <ul>
+            <li>Default-DataType</li>
+            <ul>
+                <li><a href="./TypeScript/datatypes/default-datatype/number/number.html">Number</a></li>
+                <li><a href="./TypeScript/datatypes/default-datatype/string/string.html">String</a></li>
+            </ul>
+            <li>OwnDataType</li>
+            <ul>
+                <li><a href="./TypeScript/datatypes/ownDataType/ownDatatype.html">OwnDataType</a></li>
+            </ul>
+        </ul>
+           </ul>
+            
     </ol>
     
 </body>
