--- a/Front/fullstack/frontend/languges/TypeScript/DataTypes/DefaultDataType/String/string.html
+++ b/Front/fullstack/frontend/languges/TypeScript/DataTypes/DefaultDataType/String/string.html
@@ -1,9 +1,9 @@
 <script>
-let tejuaddress="busston"
-    let words="hello im     string  ${tejuaddress}"
+let Neeladdress="busstation"
+    let words="hello im string  ${Neeladdress}"
     console.log(words)
-    let words1='hello im     string ${tejuaddress}'
-    let words2=`hello im     string ${tejuaddress}`
+    let words1='hello im string ${Neeladdress}'
+    let words2=`hello im string ${Neeladdress}`
     console.log(words1)
     console.log(words2)
     let word4=new String("hello")
