--- a/Front/fullstack/frontend/languges/TypeScript/DataTypes/DefaultDataType/Number/number.html
+++ b/Front/fullstack/frontend/languges/TypeScript/DataTypes/DefaultDataType/Number/number.html
@@ -1,7 +1,7 @@
 <script>
 
     let mony=50000
-    console.log(mony)
-    let mony2=new Number(123456)
-    console.log(mony2)
+    console.log(money)
+    let money2=new Number(123456)
+    console.log(money2)
 </script>
