--- a/Front/fullstack/frontend/index.html
+++ b/Front/fullstack/frontend/index.html
@@ -12,6 +12,9 @@
         <p>The difference between Front-End and Back-End is that Front-End refers to how a web page looks,
             while back-end refers to how it works.</p>
             <p>You can think of Front-End as client-side and Back-End as server-side.</p>
+            <p>HTML/CSS:- For creating the structure and styling of web pages.
+              <br>JavaScript:- For adding interactivity and dynamic content to web pages.
+              <br>Frameworks and libraries like React, Angular, or Vue.js: To build interactive and responsive front-end interfaces.</p>
     </div>
    
     <p><b>The basic languages for Front-End Development are:</b></p>
