--- a/Front/fullstack/frontend/languges/TypeScript/DataTypes/DefaultDataType/String/string.html
+++ b/Front/fullstack/frontend/languges/TypeScript/DataTypes/DefaultDataType/String/string.html
@@ -1,3 +1,8 @@
+
+
+<h1>String</h1>
+<p>It is used to represent a sequence of characters</p>
+
 <script>
 let Neeladdress="busstation"
     let words="hello im string  ${Neeladdress}"
