--- a/Front/fullstack/frontend/Frameworks/index.html
+++ b/Front/fullstack/frontend/Frameworks/index.html
@@ -9,9 +9,14 @@
     <h1>Bootstrap</h1>
     <p>Bootstrap is the most popular CSS Framework for developing responsive and mobile-first websites.
         <br>Bootstrap is a free front-end framework for faster and easier web development
-        <br>Bootstrap includes HTML and CSS based design templates for typography, forms, buttons, tables, navigation, modals, image carousels and many other, as well as optional JavaScript plugins
+        <br>Bootstrap includes HTML and CSS based design templates for typography, forms, buttons, tables, navigation, modals, <br>image carousels and many other, as well as optional JavaScript plugins
         <br>Bootstrap also gives you the ability to easily create responsive designs
     </p>
+    <h2>Advantages of Bootstrap:</h2>
+    <p><b>Easy to use:-</b> Anybody with just basic knowledge of HTML and CSS can start using Bootstrap
+        <br><b>Responsive features:-</b> Bootstrap's responsive CSS adjusts to phones, tablets, and desktops
+        <br><b>Mobile-first approach:- </b>In Bootstrap, mobile-first styles are part of the core framework
+        <br><b>Browser compatibility:- </b>Bootstrap 5 is compatible with all modern browsers (Chrome, Firefox, <br>Edge, Safari, and Opera). Note that if you need support for IE11 and down, you must use either <br>BS4 or BS3.</p>
     <ul>
         <li><a href="./Bootstrap/offline/portfolio/index.html">Offline</a></li>
         <li><a href="./Bootstrap/online/index.html">Online</a></li>
