--- a/Front/fullstack/frontend/languges/TypeScript/DataTypes/DefaultDataType/Number/number.html
+++ b/Front/fullstack/frontend/languges/TypeScript/DataTypes/DefaultDataType/Number/number.html
@@ -1,3 +1,10 @@
+
+<h1>Number</h1>
+<p>It is used to represent both Integer as well as Floating-Point numbers</p>
+
+
+
+
 <script>
 
     let mony=50000
