--- a/Front/fullstack/frontend/languges/index.html
+++ b/Front/fullstack/frontend/languges/index.html
@@ -26,12 +26,22 @@
             <li><a href="./TypeScript/intro/intro.html">Introduction</a></li>  
         </ul>
         <ul>
+            <li>Functions</li>
+            <ul>
+                <li><a href="./TypeScript/Functions/hoc.html">HoC</a></li>
+                <li><a href="./TypeScript/Functions/anonomous.html">Anonymous</a></li>
+                <li><a href="./TypeScript/Functions/iife.html">IIfe</a></li>
+                <li><a href="./TypeScript/Functions/normal.html">Normal</a></li>
+            </ul>
+        </ul>
+        <ul>
             <li>DataTypes</li>
            <ul>
             <li>Default-DataType</li>
             <ul>
-                <li><a href="./TypeScript/datatypes/default-datatype/number/number.html">Number</a></li>
-                <li><a href="./TypeScript/datatypes/default-datatype/string/string.html">String</a></li>
+                <li><a href="./TypeScript/DataTypes/DefaultDataType/Number/number.html">Number</a></li>
+                <li><a href="./TypeScript/DataTypes/DefaultDataType/String/string.html">String</a></li>
+                <li><a href="./TypeScript/DataTypes/DefaultDataType/Arrays/Arrays.html">Array</a></li>
             </ul>
             <li>OwnDataType</li>
             <ul>
