--- a/Front/fullstack/frontend/languges/index.html
+++ b/Front/fullstack/frontend/languges/index.html
@@ -42,6 +42,7 @@
                 <li><a href="./TypeScript/DataTypes/DefaultDataType/Number/number.html">Number</a></li>
                 <li><a href="./TypeScript/DataTypes/DefaultDataType/String/string.html">String</a></li>
                 <li><a href="./TypeScript/DataTypes/DefaultDataType/Arrays/Arrays.html">Array</a></li>
+                <li><a href="./TypeScript/DataTypes/DefaultDataType/Object/obj.html">Object</a></li>
             </ul>
             <li>OwnDataType</li>
             <ul>
