--- a/Front/fullstack/frontend/languges/TypeScript/DataTypes/DefaultDataType/Object/obj.html
+++ b/Front/fullstack/frontend/languges/TypeScript/DataTypes/DefaultDataType/Object/obj.html
@@ -3,6 +3,7 @@
 <p>JavaScript is an object-based language. Everything is an object in JavaScript.
 
    <br> JavaScript is template based not class based. Here, we don't create class to get the object. But, we direct create objects.</p>
+   <p>object is a key,value and pair</p>
 
 
 
