--- a/Front/fullstack/frontend/languges/index.html
+++ b/Front/fullstack/frontend/languges/index.html
@@ -39,6 +39,9 @@
                 <li><a href="./TypeScript/Functions/anonomous.html">Anonymous</a></li>
                 <li><a href="./TypeScript/Functions/iife.html">IIfe</a></li>
                 <li><a href="./TypeScript/Functions/normal.html">Normal</a></li>
+                <li><a href="./TypeScript/Functions/fateArrow.html">fateArrow</a></li>
+                <li><a href="./TypeScript/Functions/generator.html">generator</a></li>
+                <li><a href="./TypeScript/Functions/pure.html">Pure</a></li>
             </ul>
         </ul>
         <ul>
