--- a/Front/fullstack/frontend/languges/Css/Border-Radius/Borderradius.html
+++ b/Front/fullstack/frontend/languges/Css/Border-Radius/Borderradius.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1>Definition of border-radius</h1>
-    <p>The border-radius property defines the radius of the element's corners.</p>
+    <p>The border-radius property defines the radius of the element's corners.Clippath</p>
     <style>
         #root{
             width: 500px;
