--- a/Front/fullstack/frontend/languges/TypeScript/Dom/document.html
+++ b/Front/fullstack/frontend/languges/TypeScript/Dom/document.html
@@ -6,6 +6,10 @@
     <title>Document</title>
 </head>
 <body>
+    <h1>Document Object Model</h1>
+    <p>The document object represents the whole html document.
+
+        When html document is loaded in the browser,<br> it becomes a document object. It is the root element that represents the html document. <br>It has properties and methods. By the help of document object, we can add dynamic content to our web page.</p>
     <div id="root"></div>
     <img width="200px" src="./1.jpeg" alt="">
     <img width="200px" src="./1.jpeg" alt="">
