--- a/Front/fullstack/frontend/languges/TypeScript/DataTypes/DefaultDataType/String/string.html
+++ b/Front/fullstack/frontend/languges/TypeScript/DataTypes/DefaultDataType/String/string.html
@@ -13,4 +13,26 @@ let Neeladdress="busstation"
     console.log(words2)
     let word4=new String("hello")
     console.log(word4)
+
+
+//    this is for lexical scope concept explaination
+// it is ability for a FUNCTION  scope to access variables from parent scope
+    // function abc(){
+    //     let name="nilkand"
+    //     let ravi=()=>{
+    //         console.log(name)
+    //     }
+    //     return ravi
+    // }
+    // console.log(abc())
+
+    // ex2:-
+    // function parent(){
+    //     let a=10;
+    //     function child(){
+    //         console.log(a)
+    //     }
+    //     child()
+    // }
+    // parent()
 </script>
