--- a/Front/fullstack/frontend/languges/TypeScript/Module/problem/problem.html
+++ b/Front/fullstack/frontend/languges/TypeScript/Module/problem/problem.html
@@ -6,8 +6,9 @@
     <title>Document</title>
 </head>
 <body>
-    <div id="root"></div>
-    <button onclick="displayProducts()">click to see all products</button>
-<script src="./Usingvideo.js"></script>
+    
+
+    <script src="./p1.js"></script>
+    <script src="./p2.js"></script>
 </body>
 </html>
