--- a/Front/fullstack/frontend/languges/TypeScript/Dom/document.html
+++ b/Front/fullstack/frontend/languges/TypeScript/Dom/document.html
@@ -21,6 +21,7 @@
     <img width="200px" src="./1.jpeg" alt="">
     <img width="200px" src="./1.jpeg" alt="">
     <img width="200px" src="./1.jpeg" alt="">
+    <video width="200px src="
 <script src="./scr.js"></script>
 </body>
 </html>
