--- a/Front/fullstack/frontend/languges/TypeScript/Fetch/fetch.html
+++ b/Front/fullstack/frontend/languges/TypeScript/Fetch/fetch.html
@@ -1,8 +1,8 @@
 <script>
 
-   let apiData= fetch('https://fakestoreapi.com/products')
-   apiData= apiData.then((data)=>{return data.json()})
-             apiData.then((d)=>{console.log(d)})
+   // let apiData= fetch('https://fakestoreapi.com/products')
+   // apiData= apiData.then((data)=>{return data.json()})
+   //           apiData.then((d)=>{console.log(d)})
    //console.log(apiData)
 
 //   async function apicaller(){
@@ -12,19 +12,19 @@
 //    }
 //    apicaller()
 
-   async function apicaller1(){
-    let apiData1= fetch('https://data.covid19india.org/data.json')
- apiData1=await (await apiData1).json()
-   console.log(apiData1)
-   }
-   apicaller1()
+//    async function apicaller1(){
+//     let apiData1= fetch('https://api.github.com/users')
+//  apiData1=await (await apiData1).json()
+//    console.log(apiData1)
+//    }
+//    apicaller1()
 
-   async function apicaller(){
-    let apiData= fetch('https://jsonplaceholder.typicode.com/comments')
- apiData=await (await apiData).json()
-   console.log(apiData)
-   }
-   apicaller()
+//    async function apicaller2(){
+//     let apiData2= fetch('https://jsonplaceholder.typicode.com/comments')
+//  apiData2=await (await apiData2).json()
+//    console.log(apiData2)
+//    }
+//    apicaller2()
 
    async function apicaller(){
     let apiData= fetch('https://jsonplaceholder.typicode.com/photos')
