--- a/Front/fullstack/frontend/languges/TypeScript/Project/CoronaApi/jasonphotos.html
+++ b/Front/fullstack/frontend/languges/TypeScript/Project/CoronaApi/jasonphotos.html
@@ -33,6 +33,7 @@
 
                 const imageElement = document.createElement('img');
                 imageElement.src = item.thumbnailUrl;
+                imageElement.style.width="200px"
                 imageElement.alt = item.title;
 
                 const linkElement = document.createElement('a');
