--- a/Front/fullstack/frontend/languges/TypeScript/Project/DigitalClock/digclock.html
+++ b/Front/fullstack/frontend/languges/TypeScript/Project/DigitalClock/digclock.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <html>
 <head>
   <title>Digital Watch javaScript</title>
@@ -9,5 +9,24 @@
     setInterval(() => digitalWatch.textContent = new Date().toLocaleTimeString(), 1000);
     const digitalWatch = document.getElementById('digital-watch');
   </script>
+</body>
+</html> -->
+<!DOCTYPE html>
+<html>
+<head>
+    <style>
+        #clock {
+            font-size: 100px;
+            font-family: Arial, sans-serif;
+        }
+    </style>
+</head>
+<body>
+    <div id="clock"></div>
+    <script>
+        setInterval(() => {
+            document.getElementById('clock').textContent = new Date().toLocaleTimeString();
+        }, 1000);
+    </script>
 </body>
 </html>
