--- a/Front/fullstack/frontend/languges/index.html
+++ b/Front/fullstack/frontend/languges/index.html
@@ -77,7 +77,7 @@
             <li><a href="./TypeScript/Project/staticCalculator.html">Static Calculator javaScript</a></li>
             <li>Digital Clock:-</li>
             <ul>
-                <li><a href="./TypeScript/Project/DigitalClock/digitalclock.html">Digital Clock</a></li>
+                <li><a href="./TypeScript/Project/DigitalClock/digclock.html">DigClock</a></li>
                 <li><a href="./TypeScript/Project/DigitalClock/digclock.html">Digital Clock</a></li>
             </ul>
 
