--- a/Front/fullstack/frontend/languges/TypeScript/Project/CoronaApi/jasonphotos.html
+++ b/Front/fullstack/frontend/languges/TypeScript/Project/CoronaApi/jasonphotos.html
@@ -1,99 +1,48 @@
- <!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>API Data Display</title>
+    <title>PokeAPI Results</title>
 </head>
-<body>
-    <button id="loadDataBtn">Load Data</button>
-    <div id="dataContainer"></div>
+<body style="background-color: rgb(166, 218, 23);">
+    <div id="root"></div>
+    <button onclick="apicaller()">Click me</button>
     <script>
-        const loadDataBtn = document.getElementById("loadDataBtn");
-        const dataContainer = document.getElementById("dataContainer");
+        async function apicaller() {
+            let div = document.getElementById('root');
+            let apiResponse = await fetch('https://pokeapi.co/api/v2/pokemon/');
+            let apiData = await apiResponse.json();
 
-        loadDataBtn.addEventListener("click", loadData);
+            let h1 = document.createElement('h1');
+            h1.innerHTML = `Count: ${apiData.count}`;
+            div.appendChild(h1);
 
-        function loadData() {
-            fetch('https://jsonplaceholder.typicode.com/photos')
-                .then(response => response.json())
-                .then(data => displayData(data))
-                .catch(error => console.error('Error fetching data:', error));
-        }
+            let h2 = document.createElement('h2');
+            h2.innerHTML = `Next: ${apiData.next}`;
+            div.appendChild(h2);
 
-        function displayData(data) {
-            dataContainer.innerHTML = ''; // Clear previous data
+            let h3 = document.createElement('h3');
+            h3.innerHTML = `Previous: ${apiData.previous}`;
+            div.appendChild(h3);
 
-            data.forEach(item => {
-                const itemDiv = document.createElement('div');
-                itemDiv.classList.add('data-item');
+            let h4 = document.createElement('h4');
+            h4.innerHTML = `Results:`;
 
-                const titleElement = document.createElement('h3');
-                titleElement.textContent = item.title;
-
-                const imageElement = document.createElement('img');
-                imageElement.src = item.thumbnailUrl;
-                imageElement.style.width="200px"
-                imageElement.alt = item.title;
-
-                const linkElement = document.createElement('a');
-                linkElement.href = item.url;
-                linkElement.textContent = 'View Full Image';
-
-                itemDiv.appendChild(titleElement);
-                itemDiv.appendChild(imageElement);
-                itemDiv.appendChild(linkElement);
-
-                dataContainer.appendChild(itemDiv);
+            let ul = document.createElement('ul');
+            apiData.results.forEach((result) => {
+                let li = document.createElement('li');
+                let a = document.createElement('a');
+                let pokemonName = result.name; // Extract the Pokemon name
+                a.href = `https://www.pokemon.com/us/pokedex/${pokemonName}/`; // Construct the URL
+                a.textContent = result.name; // Display the Pokemon name as link text
+                li.appendChild(a);
+                ul.appendChild(li);
             });
+
+            h4.appendChild(ul);
+            div.appendChild(h4);
         }
     </script>
 </body>
 </html>
-
-
-
-<!-- <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>API Data Display</title>
-</head>
-<body>
-    <button id="loadDataBtn">Load Data</button>
-    <div id="dataContainer"></div>
-    <script>
-        const loadDataBtn = document.getElementById("loadDataBtn");
-        const dataContainer = document.getElementById("dataContainer");
-
-        loadDataBtn.addEventListener("click", loadData);
-
-        function loadData() {
-            fetch('https://jsonplaceholder.typicode.com/photos')
-                .then(response => response.json())
-                .then(data => displayData(data))
-                .catch(error => console.error('Error fetching data:', error));
-        }
-
-        function displayData(data) {
-            dataContainer.innerHTML = ''; // Clear previous data
-
-            data.forEach(item => {
-                
-                const itemDiv = document.createElement('div');
-                itemDiv.classList.add('data-item');
-
-                const titleElement = document.createElement('h3');
-                titleElement.textContent = `ID: ${item.id}, Title: ${item.title}`;
-
-                itemDiv.appendChild(titleElement);
-                dataContainer.appendChild(itemDiv);
-            });
-        }
-    </script>
-</body>
-</html>  -->
-
-
-
